--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="password">Password</string>
     <string name="log_in">Log in</string>
     <string name="sign_up">Sign up</string>
+    <string name="create_a_place">Create a place</string>
+    <string name="loading">loading...</string>
+    <string name="logout">Log out</string>
 </resources>
