Tab navigation implemented
1. Basic tabs added, not functionality yet
2. UI of tabs done
3. Fragments created for basic pages

--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="create_a_place">Create a place</string>
     <string name="loading">loading...</string>
     <string name="logout">Log out</string>
+    <string name="title_liked">Liked</string>
+    <string name="title_search">Search</string>
+    <string name="title_recommend">Recommend</string>
+    <string name="title_profile">Profile</string>
 </resources>
