--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -14,4 +14,9 @@
     <string name="title_search">Search</string>
     <string name="title_recommend">Recommend</string>
     <string name="title_profile">Profile</string>
+    <string name="name">Name</string>
+    <string name="description">Description</string>
+    <string name="price">Price</string>
+    <string name="address">Address</string>
+    <string name="phone_number">Phone Number</string>
 </resources>
