--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -22,4 +22,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="choose_location">Choose location</string>
+    <string name="take_a_picture">Take a picture</string>
+    <string name="take_picture">Take picture</string>
 </resources>
