--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -24,4 +24,10 @@
     <string name="choose_location">Choose location</string>
     <string name="take_a_picture">Take a picture</string>
     <string name="take_picture">Take picture</string>
+    <string name="choose_a_category">Choose a category</string>
+    <string name="fast_food">fast food</string>
+    <string name="italian">Italian</string>
+    <string name="coffee">Coffee</string>
+    <string name="japanese">Japanese</string>
+    <string name="drinks">Drinks</string>
 </resources>
