--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -19,15 +19,17 @@
     <string name="price">Price</string>
     <string name="address">Address</string>
     <string name="phone_number">Phone Number</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="choose_location">Choose location</string>
     <string name="take_a_picture">Take a picture</string>
     <string name="take_picture">Take picture</string>
     <string name="choose_a_category">Choose a category</string>
-    <string name="fast_food">fast food</string>
+    <string name="fast_food">Fast food</string>
     <string name="italian">Italian</string>
     <string name="coffee">Coffee</string>
     <string name="japanese">Japanese</string>
     <string name="drinks">Drinks</string>
+    <string name="share_with_the_world">Share with the world!</string>
+    <string name="create_place">Create place</string>
+    <string name="create_a_new_place">Create a new place!</string>
 </resources>
