--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -32,4 +32,9 @@
     <string name="share_with_the_world">Share with the world!</string>
     <string name="create_place">Create place</string>
     <string name="create_a_new_place">Create a new place!</string>
+    <string name="search">Search</string>
+    <string name="search_dots">Search...</string>
+    <string name="users">Users</string>
+    <string name="places">Places</string>
+    <string name="no_results_found">No results found</string>
 </resources>
