--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
     <string name="take_a_picture">Take a picture</string>
     <string name="take_picture">Take picture</string>
     <string name="choose_a_category">Choose a category</string>
-    <string name="fast_food">Fast food</string>
+    <string name="fast_food">Burgers</string>
     <string name="italian">Italian</string>
     <string name="coffee">Coffee</string>
     <string name="japanese">Japanese</string>
