Override security to allow calls to specific local network ip address without security certificates
Answer can be found on StackOverflow's post: https://stackoverflow.com/questions/45940861/android-8-cleartext-http-traffic-not-permitted

--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -59,4 +59,5 @@
     <string name="find_nearby">Find nearby</string>
     <string name="details">details</string>
     <string name="close_tag">[x]</string>
+    <string name="server_api_key">S0Vta5WnL435W3cma5atcWPczodY!AXU8flc9nE#Zv4^nd1xuLyDmZZ&amp;c#PRjMc**9$z2JvklH*4GQH$n4SLIl9bwUNTdzY0K6b</string>
 </resources>
