--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -62,4 +62,8 @@
     <string name="server_api_key">S0Vta5WnL435W3cma5atcWPczodY!AXU8flc9nE#Zv4^nd1xuLyDmZZ&amp;c#PRjMc**9$z2JvklH*4GQH$n4SLIl9bwUNTdzY0K6b</string>
     <string name="seems_you_don_t_follow_anyone">Seems you don\'t follow anyone</string>
     <string name="top_recommendations_for_you">Top recommendations for you</string>
+    <string name="promote">Promote</string>
+    <string name="what_is_a_promotion">What is a promotion?</string>
+    <string name="promotion_description">When you promote a place, our powerful backend will use the best algorithms in order to find the best users to recommend the place to. This users will see the place the next time they login into the app. Then, you will have statistics about how your promotion went.</string>
+    <string name="cancel">Cancel</string>
 </resources>
