--- a/Places/app/src/main/res/values/strings.xml
+++ b/Places/app/src/main/res/values/strings.xml
@@ -74,4 +74,5 @@
     <string name="sent">Sent</string>
     <string name="viewed">Viewed</string>
     <string name="clicked">Clicked</string>
+    <string name="server_url">http://192.168.1.69:5000/</string>
 </resources>
